--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- pre loader -->
   <div class="loader-container">
-    <img draggable="false" src="./assests/images/preloader3.gif" alt="">
+    <img draggable="false" src="./assests/s/preloader3.gif" alt="">
   </div>
 
 
@@ -80,8 +80,8 @@
         </ul>
       </div>
     </div>
-    <div class="image">
-      <img draggable="false" class="tilt" src="./assests/images/hero3.gif" alt="">
+    <div class="">
+      <img draggable="false" class="tilt" src="./assests/s/hero3.gif" alt="">
     </div>
   </section>
   <!-- hero section ends -->
@@ -93,8 +93,8 @@
 
     <div class="row">
 
-      <div class="image">
-        <img draggable="false" class="tilt" src="./assests/images/me.jpeg" alt="">
+      <div class="">
+        <img draggable="false" class="tilt" src="./assests/s/me.jpeg" alt="">
       </div>
       <div class="content">
         <h3>I'm Ankur Bhadauria.</h3>
@@ -140,9 +140,9 @@
     <div class="box-container">
 
       <div class="box">
-        <div class="image">
+        <div class="">
           <a href="https://academics.mnnit.ac.in/new/" target="_blank">
-            <img draggable="false" src="./assests/images/educat/collage.png" alt="" style="height: 150px; width: 150px;"/>
+            <img draggable="false" src="./assests/s/educat/collage.png" alt="" style="height: 150px; width: 150px;"/>
 
         </div>
         <div class="content">
@@ -155,9 +155,9 @@
       </div>
 
       <div class="box">
-        <div class="image">
+        <div class="">
           <!-- <a href="http://www.schoolfinds.com/high-school-sandha-2-bhalar-munger.html"> -->
-            <img draggable="false" src="./assests/images/educat/school.png" alt=""  style="margin-top: 20px; height: 120px; width: 150px;"/>
+            <img draggable="false" src="./assests/s/educat/school.png" alt=""  style="margin-top: 20px; height: 120px; width: 150px;"/>
         </div>
         <div class="content">
           <h3>Intermediate and HighSchool</h3>
@@ -180,7 +180,7 @@
     <div class="box-container">
 
       <div class="box tilt">
-        <img draggable="false" src="./assests/images/projects/viewhub.png" alt="" />
+        <img draggable="false" src="./assests/s/projects/viewhub.png" alt="" />
         <div class="content">
           <div class="tag">
             <h3>ViewHub [Django]</h3>
@@ -225,7 +225,7 @@
           <div class="desc">
             <p>An image editing app based on javascript libraries.</p>
             <div class="btns">
-              <a href="https://github.com/AnkurBhadauria/Image-Editor-Project/" class="btn" target="_blank"><i
+              <a href="https://github.com/AnkurBhadauria/Image-editor" class="btn" target="_blank"><i
                   class="fas fa-eye"></i> View</a>
               <a href="https://github.com/AnkurBhadauria/Image-Editor-Project" class="btn" target="_blank"><i
                   class="fas fa-code"></i> Code</a>
