--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <div class="desc">
             <p>An image editing app based on javascript libraries.</p>
             <div class="btns">
-              <a href="https://github.com/AnkurBhadauria/Image-editor" class="btn" target="_blank"><i
+              <a href="https://github.com/AnkurBhadauria/Image-editor/blob/main/index.html" class="btn" target="_blank"><i
                   class="fas fa-eye"></i> View</a>
               <a href="https://github.com/AnkurBhadauria/Image-Editor-Project" class="btn" target="_blank"><i
                   class="fas fa-code"></i> Code</a>
